...
            )
        }

        if (group != null) {
            Text(text = "Group Name: ${group!!.name}", style = MaterialTheme.typography.headlineSmall)
            Spacer(modifier = Modifier.height(16.dp))
            Text(text = "Members:")
            group!!.members.forEach { member ->
                Text(text = member.name, style = MaterialTheme.typography.bodyMedium)
            }

            Spacer(modifier = Modifier.height(16.dp))
            Button(onClick = { showAddFriendDialog = true }) {
...
